applications/components/nelcaso-core/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dapr-headers
  namespace: nelcaso
spec:
  headers:
    customRequestHeaders:
      dapr-app-id: "nelcaso-core"
