applications/components/nelcaso-core/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nelcaso-core
  namespace: nelcaso
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - nelcaso.dev.spoletum.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nelcaso-core
          port: 3500
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: nelcaso-to-traefik
  namespace: traefik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: nelcaso
  to:
    - group: ""
      kind: Service
      namespace: nelcaso
